add temporary icon. add delete button

--- a/listSessions.html
+++ b/listSessions.html
@@ -29,8 +29,12 @@
         <input type="submit" value="Go back" />
       </form>
     </div>
-      <button id='test'>test</button>
-    <div id="SessionList">
+      <button id='restore'>Restore</button>
+      <button id='remove'>Delete</button>
+    <div>
+      <select id="SessionList">
+        
+      </select>
     </div>
   </body>
 </html>
