introduce grid. new font.

--- a/popup.html
+++ b/popup.html
@@ -1,44 +1,73 @@
 <!doctype html>
 <html>
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Tab Store</title>
     <style type="text/css">
       body {
         margin: 10px;
-        min-width:300px;
+        min-width:250px;
+        font-family: 'Roboto', sans-serif;
       }
 
       h1 {
-        font-size: 15px;
+        font-size: 20px;
       }
 
-      #container1 {
-        align-items: center;
-        display: flex;
-        justify-content: space-between;
-      }
-      #container2 {
-        align-items: center;
-        display: flex;
-        justify-content: space-between;
-      }
-    </style>    
+    .wrapper {
+        display: grid;
+        grid-gap: 10px;
+        grid-template-columns: 150px;
+        grid-template-rows: 10px 40px 10px 20px;
+    }
+
+    #saveTitle {
+              /*RS / CS / RE / CE*/
+      grid-area: 1 / 1 / 2 / 2;
+    }
+
+    #saveForm {
+      /*RS / CS / RE / CE*/
+      grid-area: 2 / 1 / 3 / 2;
+    }
+
+    #restoreTitle {
+            /*RS / CS / RE / CE*/
+      grid-area: 3 / 1 / 4 / 2;
+    }
+
+    #restoreForm {
+              /*RS / CS / RE / CE*/
+      grid-area: 4 / 1 / 5 / 2;
+    }
+    </style>  
+
+    <!-- ROBOTO FONT -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto">
+    
     <script src="popup.js"></script>
   </head>
 
   <body>
     <h1>Tab Store</h1>
-    <div id="container1">
-      <span>Save Current Session</span>
-      <input type="text" id="sessionname" placeholder="Session Name">
-      <button id="savebtn" type="submit">Save</button>
-    </div>
-    <div id="container2">
-      <span>Restore Session</span>
-      <form action="/listSessions.html">
-        <input type="submit" value="List Saved Sessions" />
-      </form>
-      <!-- <button id="showsavedsessions">Show Saved Sessions</button> -->
+    <div class="wrapper">
+      <div id="saveTitle">
+        <span>Save Current Session</span>
+      </div>
+      <div id="saveForm">
+        <form>
+          <input type="text" id="sessionname" placeholder="Session Name" required="required">
+          <button id="savebtn">Save</button>
+        </form>
+      </div>
+      <div id="restoreTitle">
+        <span>Restore Session</span>
+      </div>
+      <div id="restoreForm">
+        <form action="/listSessions.html">
+          <button type="submit">List Saved Sessions</button>
+        </form>
+      </div>
     </div>
   </body>
 </html>
