--- a/listSessions.html
+++ b/listSessions.html
@@ -1,15 +1,17 @@
 <!doctype html>
 <html>
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Tab Store</title>
     <style type="text/css">
       body {
         margin: 10px;
-        min-width:300px;
+        min-width:250px;
+        font-family: 'Roboto', sans-serif;
       }
 
       h1 {
-        font-size: 15px;
+        font-size: 20px;
       }
 
       #SessionList {
@@ -18,6 +20,10 @@
         justify-content: space-between;
       }
     </style>   
+    
+    <!-- ROBOTO FONT -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto">
+
     <script src="listSessions.js"></script>
     <script src="jquery-3.2.1.min.js"></script> 
   </head>
