fix list reload after a deletion

--- a/listSessions.html
+++ b/listSessions.html
@@ -45,11 +45,11 @@
     
     <!-- ROBOTO FONT -->
     <link href="https://fonts.googleapis.com/css?family=Roboto">
-
-    <script src="listSessions.js"></script>
-    <script src="jquery-3.2.1.min.js"></script> 
+    <!-- JQUERY -->
+    <script src="jquery-3.2.1.min.js"></script>
+    
+    <script src="listSessions.js"></script>     
   </head>
-
   <body>
     <h1>Tab Store</h1>
     <div class="wrapper">
