--- a/listSessions.html
+++ b/listSessions.html
@@ -5,40 +5,94 @@
     <title>Tab Store</title>
     <style type="text/css">
       body {
-        margin: 10px;
-        min-width:250px;
+        margin: 0px;
+        min-width:200px;
+        min-height: 150px;
         font-family: 'Roboto', sans-serif;
+        background: linear-gradient(-45deg, #2f2f2f, #494949);
       }
 
       h1 {
         font-size: 20px;
+        color: white;
+        text-align: center;
       }
 
     .wrapper {
         display: grid;
-        grid-gap: 10px;
-        grid-template-columns: 75px 75px;
-        grid-template-rows: 20px 20px 20px;
-    }
-
-    #restoreBtn {
-              /*RS / CS / RE / CE*/
-      grid-area: 2 / 1 / 3 / 2;
+        grid-gap: 0px;
+        grid-template-columns: 200px;
+        grid-template-rows: 30px 30px 50px;
     }
 
     #list {
               /*RS / CS / RE / CE*/
-      grid-area: 1 / 1 / 2 / 2;
+      grid-area: 2 / 1 / 3 / 2;
+      text-align: center;
+      margin: 6px;
     }
 
-    #removeBtn {
+    #Buttons {
+      text-align: center;
+    }
+
+    #restore {
               /*RS / CS / RE / CE*/
-      grid-area: 2 / 2 / 3 / 3;
+      grid-area: 2 / 1 / 3 / 2;
+      margin: 3px;
+    }
+
+    #remove {
+              /*RS / CS / RE / CE*/
+      grid-area: 2 / 1 / 3 / 2;
+      margin: 3px;
+      
     }
 
     #popupForm {
               /*RS / CS / RE / CE*/
-      grid-area: 3 / 1 / 4 / 2;
+      grid-area: 1 / 1 / 2 / 2;
+      background: linear-gradient(45deg, #2f2f2f, #494949);
+    }
+
+    #restoreSection {
+                /*RS / CS / RE / CE*/
+      grid-area: 2 / 1 / 4 / 2;
+      background: linear-gradient(-45deg, #2f2f2f, #494949);
+    }
+
+    #sessionTitle {
+      text-align: center;
+    }
+
+    form {
+      margin: 4px
+    }
+
+    select {
+      background-color: #646464;
+      color: white;
+    }
+
+    button {
+        background-color: #646464; 
+        border: none;
+        border-radius: 3px;
+        color: white;
+        padding: 2px 12px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 12px;
+    }
+
+    #backBtn {
+      margin-left: 15px;
+      padding: 0px 15px;
+    }
+
+    span {
+      color: white; 
     }
 
     </style>   
@@ -53,19 +107,22 @@
   <body>
     <h1>Tab Store</h1>
     <div class="wrapper">
-      <div id="restoreBtn">
-        <button id='restore'>Restore</button>
-      </div>
-      <div id="removeBtn">
-        <button id='remove'>Delete</button>
-      </div>
-      <div id="list">
-        <select id="SessionList"></select>
-      </div>
       <div id="popupForm">
         <form action="/popup.html">
-          <button type="submit">Go back</button>
+          <button type="submit" id="backBtn"><img src="ic_arrow_back_white_18px.svg"></button>
         </form>
+      </div>
+      <div id="restoreSection">
+        <div id="sessionTitle">
+          <span>Session List</span>
+        </div>
+        <div id="list">
+          <select id="SessionList"></select>
+        </div>
+        <div id="Buttons">
+          <button id='restore'><img src="ic_restore_white_18px.svg"></button>
+          <button id='remove'><img src="ic_delete_white_18px.svg"></button>
+        </div>
       </div>
     </div>
   </body>
