--- a/popup.html
+++ b/popup.html
@@ -5,40 +5,87 @@
     <title>Tab Store</title>
     <style type="text/css">
       body {
-        margin: 10px;
-        min-width:250px;
+        margin: 0px;
+        min-width:200px;
+        min-height: 150px;
         font-family: 'Roboto', sans-serif;
+        background: linear-gradient(-45deg, #2f2f2f, #494949);
       }
 
       h1 {
         font-size: 20px;
+        color: white;
+        text-align: center;
       }
 
     .wrapper {
         display: grid;
-        grid-gap: 10px;
-        grid-template-columns: 150px;
-        grid-template-rows: 10px 40px 10px 20px;
+        grid-gap: 0px;
+        grid-template-columns: 200px;
+        grid-template-rows: 15px 40px 15px 40px;
     }
 
     #saveTitle {
               /*RS / CS / RE / CE*/
-      grid-area: 1 / 1 / 2 / 2;
+      grid-area: 3 / 1 / 4 / 2;
+      text-align: center;
     }
 
     #saveForm {
       /*RS / CS / RE / CE*/
-      grid-area: 2 / 1 / 3 / 2;
+      grid-area: 4 / 1 / 5 / 2;
+      text-align: center;
+    }
+
+    #savebtn {
+            /*RS / CS / RE / CE*/
+      grid-area: 4 / 2 / 5 / 3;
     }
 
     #restoreTitle {
             /*RS / CS / RE / CE*/
-      grid-area: 3 / 1 / 4 / 2;
+      grid-area: 1 / 1 / 2 / 2;
+
     }
 
     #restoreForm {
               /*RS / CS / RE / CE*/
-      grid-area: 4 / 1 / 5 / 2;
+      grid-area: 2 / 1 / 3 / 2;
+      
+    }
+
+    #restoreSection {
+              /*RS / CS / RE / CE*/
+      grid-area: 1 / 1 / 3 / 2;
+      background: linear-gradient(45deg, #2f2f2f, #494949);
+      text-align: center;
+    }
+
+    #storeSection {
+              /*RS / CS / RE / CE*/
+      grid-area: 3 / 1 / 5 / 2;
+      background: linear-gradient(-45deg, #2f2f2f, #494949);
+    }
+   
+   span {
+      color: white; 
+    }
+
+    input {
+      width: 100px;
+    }
+
+    button {
+      background-color: #646464; 
+      border: none;
+      border-radius: 3px;
+      color: white;
+      padding: 5px 12px;
+      margin: 5px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 12px;
     }
     </style>  
 
@@ -51,23 +98,27 @@
   <body>
     <h1>Tab Store</h1>
     <div class="wrapper">
-      <div id="saveTitle">
-        <span>Save Current Session</span>
+      <div id="storeSection">
+        <div id="saveTitle">
+          <span>Save Current Session</span>
+        </div>
+        <div id="saveForm">
+          <form>
+            <input type="text" id="sessionname" placeholder="Session Name" required="required">
+            <button id="savebtn">Save</button>
+          </form>
+        </div>
       </div>
-      <div id="saveForm">
-        <form>
-          <input type="text" id="sessionname" placeholder="Session Name" required="required">
-          <button id="savebtn">Save</button>
-        </form>
-      </div>
-      <div id="restoreTitle">
-        <span>Restore Session</span>
-      </div>
-      <div id="restoreForm">
-        <form action="/listSessions.html">
-          <button type="submit">List Saved Sessions</button>
-        </form>
-      </div>
+      <div id="restoreSection">
+        <div id="restoreTitle">
+          <span>Restore Session</span>
+        </div>
+        <div id="restoreForm">
+          <form action="/listSessions.html">
+            <button type="submit">List Saved Sessions</button>
+          </form>
+        </div>
+      </div> 
     </div>
   </body>
 </html>
