--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
         min-width:200px;
         min-height: 150px;
         font-family: 'Roboto', sans-serif;
-        background: linear-gradient(-45deg, #2f2f2f, #494949);
+        background: linear-gradient(0deg, #2f2f2f, #494949);
       }
 
       h1 {
@@ -49,21 +49,23 @@
       #restoreSection {
                 /*RS / CS / RE / CE*/
         grid-area: 1 / 1 / 3 / 2;
-        background: linear-gradient(45deg, #2f2f2f, #494949);
+        /*background: linear-gradient(to right, #2f2f2f, #494949);*/
         text-align: center;
       }
 
       #storeSection {
                 /*RS / CS / RE / CE*/
         grid-area: 3 / 1 / 5 / 2;
-        background: linear-gradient(-45deg, #2f2f2f, #494949);
+        
+        /*background: linear-gradient(to right, #2f2f2f, #494949);*/
       }
 
       #saveTitle {
                 /*RS / CS / RE / CE*/
         grid-area: 3 / 1 / 4 / 2;
-        text-align: center;
+        text-align: left;
         font-weight: bold;
+        padding-left: 5px;
       }
 
       #saveForm {
@@ -81,6 +83,8 @@
               /*RS / CS / RE / CE*/
         grid-area: 1 / 1 / 2 / 2;
         font-weight: bold;
+        text-align: left;
+        padding-left: 5px;
       }
 
       #restoreForm {
